fix: Fix broken tooltips in Trade History table headers
🔧 Tooltip System Fix:
- Replaced old custom tooltip system with Bootstrap tooltips in table headers
- Fixed all 8 table header tooltips (Time, Action, Asset, Amount, Price, Total, Confidence, Reasoning)
- Changed from <span class="tooltip"> to data-bs-toggle="tooltip" system
- Added proper Bootstrap tooltip attributes and styling

📊 Trade History Table Headers Now Working:
- Time: Explains UTC timestamp format
- Action: BUY/SELL/HOLD definitions with color coding
- Asset: BTC/ETH/SOL cryptocurrency explanations
- Amount: Crypto precision and HOLD behavior
- Price: Execution vs market price context
- Total: EUR calculation explanation
- Confidence: AI confidence level ranges (0-100%)
- Reasoning: Analysis details and expandable content info

✅ Result: All question mark (?) icons in Trade History table headers
now show proper tooltips on hover with comprehensive explanations.

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -1778,103 +1778,117 @@
                                             <tr>
                                                 <th>
                                                     Time
-                                                    <span class="tooltip">
-                                                        <i class="fas fa-question-circle help-icon"></i>
-                                                        <span class="tooltiptext">
-                                                            <h6>Trade Timestamp</h6>
-                                                            When the AI made this trading decision.
-                                                            <div class="example">All times shown in UTC (24-hour format)</div>
-                                                        </span>
+                                                    <span class="help-icon-css"
+                                                           data-bs-toggle="tooltip" 
+                                                           data-bs-placement="top" 
+                                                           data-bs-html="true"
+                                                           title="<strong>Trade Timestamp</strong><br/>
+                                                                  When the AI made this trading decision.<br/>
+                                                                  <em>All times shown in UTC (24-hour format)</em>"
+                                                           style="font-size: 0.7rem; opacity: 0.7; cursor: help;">
                                                     </span>
                                                 </th>
                                                 <th>
                                                     Action
-                                                    <span class="tooltip">
-                                                        <i class="fas fa-question-circle help-icon"></i>
-                                                        <span class="tooltiptext">
-                                                            <h6>Trading Action</h6>
-                                                            What the AI decided to do.
-                                                            <ul>
-                                                                <li><strong>BUY:</strong> Purchase cryptocurrency</li>
-                                                                <li><strong>SELL:</strong> Sell cryptocurrency</li>
-                                                                <li><strong>HOLD:</strong> No action taken</li>
-                                                            </ul>
-                                                        </span>
+                                                    <span class="help-icon-css"
+                                                           data-bs-toggle="tooltip" 
+                                                           data-bs-placement="top" 
+                                                           data-bs-html="true"
+                                                           title="<strong>Trading Action</strong><br/>
+                                                                  What the AI decided to do.<br/>
+                                                                  <br/>
+                                                                  <strong>BUY:</strong> Purchase cryptocurrency<br/>
+                                                                  <strong>SELL:</strong> Sell cryptocurrency<br/>
+                                                                  <strong>HOLD:</strong> No action taken"
+                                                           style="font-size: 0.7rem; opacity: 0.7; cursor: help;">
                                                     </span>
                                                 </th>
                                                 <th>
                                                     Asset
-                                                    <span class="tooltip">
-                                                        <i class="fas fa-question-circle help-icon"></i>
-                                                        <span class="tooltiptext">
-                                                            <h6>Cryptocurrency Asset</h6>
-                                                            Which cryptocurrency was analyzed.
-                                                            <ul>
-                                                                <li><strong>BTC:</strong> Bitcoin</li>
-                                                                <li><strong>ETH:</strong> Ethereum</li>
-                                                                <li><strong>SOL:</strong> Solana</li>
-                                                            </ul>
-                                                        </span>
+                                                    <span class="help-icon-css"
+                                                           data-bs-toggle="tooltip" 
+                                                           data-bs-placement="top" 
+                                                           data-bs-html="true"
+                                                           title="<strong>Cryptocurrency Asset</strong><br/>
+                                                                  Which cryptocurrency was analyzed.<br/>
+                                                                  <br/>
+                                                                  <strong>BTC:</strong> Bitcoin<br/>
+                                                                  <strong>ETH:</strong> Ethereum<br/>
+                                                                  <strong>SOL:</strong> Solana"
+                                                           style="font-size: 0.7rem; opacity: 0.7; cursor: help;">
                                                     </span>
                                                 </th>
                                                 <th>
                                                     Amount
-                                                    <span class="tooltip">
-                                                        <i class="fas fa-question-circle help-icon"></i>
-                                                        <span class="tooltiptext">
-                                                            <h6>Crypto Amount</h6>
-                                                            How much cryptocurrency was traded.
-                                                            <div class="example">Shown with 8 decimal places for precision. 0.00000000 means HOLD (no trade).</div>
-                                                        </span>
+                                                    <span class="help-icon-css"
+                                                           data-bs-toggle="tooltip" 
+                                                           data-bs-placement="top" 
+                                                           data-bs-html="true"
+                                                           title="<strong>Crypto Amount</strong><br/>
+                                                                  How much cryptocurrency was traded.<br/>
+                                                                  <br/>
+                                                                  <em>Shown with 8 decimal places for precision.<br/>
+                                                                  0.00000000 means HOLD (no trade).</em>"
+                                                           style="font-size: 0.7rem; opacity: 0.7; cursor: help;">
                                                     </span>
                                                 </th>
                                                 <th>
                                                     Price
-                                                    <span class="tooltip">
-                                                        <i class="fas fa-question-circle help-icon"></i>
-                                                        <span class="tooltiptext">
-                                                            <h6>Execution Price</h6>
-                                                            The price per unit when the trade was executed.
-                                                            <div class="example">For HOLD decisions, this shows the current market price at decision time.</div>
-                                                        </span>
+                                                    <span class="help-icon-css"
+                                                           data-bs-toggle="tooltip" 
+                                                           data-bs-placement="top" 
+                                                           data-bs-html="true"
+                                                           title="<strong>Execution Price</strong><br/>
+                                                                  The price per unit when the trade was executed.<br/>
+                                                                  <br/>
+                                                                  <em>For HOLD decisions, this shows the current<br/>
+                                                                  market price at decision time.</em>"
+                                                           style="font-size: 0.7rem; opacity: 0.7; cursor: help;">
                                                     </span>
                                                 </th>
                                                 <th>
                                                     Total
-                                                    <span class="tooltip">
-                                                        <i class="fas fa-question-circle help-icon"></i>
-                                                        <span class="tooltiptext">
-                                                            <h6>Total EUR Value</h6>
-                                                            Total dollar amount of the trade.
-                                                            <div class="example">Amount × Price = Total EUR value. €0.00 for HOLD decisions.</div>
-                                                        </span>
+                                                    <span class="help-icon-css"
+                                                           data-bs-toggle="tooltip" 
+                                                           data-bs-placement="top" 
+                                                           data-bs-html="true"
+                                                           title="<strong>Total EUR Value</strong><br/>
+                                                                  Total EUR amount of the trade.<br/>
+                                                                  <br/>
+                                                                  <em>Amount × Price = Total EUR value.<br/>
+                                                                  €0.00 for HOLD decisions.</em>"
+                                                           style="font-size: 0.7rem; opacity: 0.7; cursor: help;">
                                                     </span>
                                                 </th>
                                                 <th>
                                                     Confidence
-                                                    <span class="tooltip">
-                                                        <i class="fas fa-question-circle help-icon"></i>
-                                                        <span class="tooltiptext">
-                                                            <h6>AI Confidence Level</h6>
-                                                            How confident the AI was in this decision (0-100%).
-                                                            <ul>
-                                                                <li><strong>80-100%:</strong> Very confident</li>
-                                                                <li><strong>60-79%:</strong> Moderately confident</li>
-                                                                <li><strong>40-59%:</strong> Low confidence</li>
-                                                                <li><strong>0-39%:</strong> Very uncertain</li>
-                                                            </ul>
-                                                        </span>
+                                                    <span class="help-icon-css"
+                                                           data-bs-toggle="tooltip" 
+                                                           data-bs-placement="top" 
+                                                           data-bs-html="true"
+                                                           title="<strong>AI Confidence Level</strong><br/>
+                                                                  How confident the AI was in this decision (0-100%).<br/>
+                                                                  <br/>
+                                                                  <strong>80-100%:</strong> Very confident<br/>
+                                                                  <strong>60-79%:</strong> Moderately confident<br/>
+                                                                  <strong>40-59%:</strong> Low confidence<br/>
+                                                                  <strong>0-39%:</strong> Very uncertain"
+                                                           style="font-size: 0.7rem; opacity: 0.7; cursor: help;">
                                                     </span>
                                                 </th>
                                                 <th>
                                                     Reasoning
-                                                    <span class="tooltip">
-                                                        <i class="fas fa-question-circle help-icon"></i>
-                                                        <span class="tooltiptext">
-                                                            <h6>AI Decision Reasoning</h6>
-                                                            Why the AI made this decision.
-                                                            <div class="example">Click "Show Details" to see comprehensive analysis including technical indicators, market conditions, and risk assessment.</div>
-                                                        </span>
+                                                    <span class="help-icon-css"
+                                                           data-bs-toggle="tooltip" 
+                                                           data-bs-placement="top" 
+                                                           data-bs-html="true"
+                                                           title="<strong>AI Decision Reasoning</strong><br/>
+                                                                  Why the AI made this decision.<br/>
+                                                                  <br/>
+                                                                  <em>Click 'Show Details' to see comprehensive analysis<br/>
+                                                                  including technical indicators, market conditions,<br/>
+                                                                  and risk assessment.</em>"
+                                                           style="font-size: 0.7rem; opacity: 0.7; cursor: help;">
                                                     </span>
                                                 </th>
                                             </tr>
