Remove uptime monitoring system and fix EUR portfolio support
Major Changes:
- Remove complex uptime tracking system (UptimeManager, restart detection, persistent uptime)
- Simplify bot startup/shutdown logging and signal handling
- Remove psutil dependency and related warnings
- Fix portfolio sync to use EUR base currency instead of hardcoded USD
- Update dashboard to show simple session uptime instead of complex restart counts
- Simplify bot_manager.py to remove uptime-related complexity
- Update documentation to remove psutil references

Fixes:
- Portfolio overview now displays correct EUR values and crypto holdings
- Dashboard no longer shows 'no data' for portfolio
- Eliminated psutil warnings in logs
- Cleaner, more reliable codebase with ~500 lines of complexity removed

Technical Details:
- Updated coinbase_client.py get_portfolio() to use config.BASE_CURRENCY (EUR)
- Fixed trading pair extraction to look for -EUR instead of -USD pairs
- Updated portfolio structure to use portfolio_value_eur, last_price_eur, etc.
- Simplified main.py startup/shutdown methods
- Updated dashboard JavaScript to show session uptime only

--- a/dashboard/static/shared-header.html
+++ b/dashboard/static/shared-header.html
@@ -19,6 +19,7 @@
             <div class="navbar-nav me-auto">
                 <a class="nav-link" href="index.html" id="nav-dashboard">Dashboard</a>
                 <a class="nav-link" href="analysis.html" id="nav-analysis">Analysis</a>
+                <a class="nav-link" href="logs.html" id="nav-logs">Logs</a>
                 <a class="nav-link" href="config.html" id="nav-config">Configuration</a>
             </div>
             
