Fix performance tracking warning colors for better readability
🎨 Improve Performance Tracking Warning Visibility

**Changes:**
- Changed alert class from 'alert-info' to 'alert-warning'
- Updated icon from 'info-circle' to 'exclamation-triangle'
- Made text more prominent with bold formatting
- Improved contrast for better readability

**Before:** Light blue background with white text (hard to read)
**After:** Yellow/orange background with dark text (much more visible)

**User Impact:**
- Performance tracking unavailable message is now clearly visible
- Better user experience when performance data is not yet available
- Consistent with warning message styling conventions

Fixes: Hard-to-read performance tracking warning colors

--- a/dashboard/static/performance.html
+++ b/dashboard/static/performance.html
@@ -1029,9 +1029,9 @@
             const performanceSection = document.querySelector('.performance-metrics-section');
             if (performanceSection) {
                 performanceSection.innerHTML = `
-                    <div class="alert alert-info">
-                        <h5><i class="fas fa-info-circle"></i> Performance Tracking</h5>
-                        <p>Advanced performance tracking is not yet available. The system needs at least 2 portfolio snapshots to calculate performance metrics.</p>
+                    <div class="alert alert-warning">
+                        <h5><i class="fas fa-exclamation-triangle"></i> Performance Tracking</h5>
+                        <p><strong>Advanced performance tracking is not yet available.</strong> The system needs at least 2 portfolio snapshots to calculate performance metrics.</p>
                         <p><strong>Note:</strong> Performance tracking will automatically start once the bot has been running and taking portfolio snapshots.</p>
                     </div>
                 `;
