Update all model references to use Gemini-3 models
- Update test files to use gemini-3-flash-preview instead of gemini-2.5-pro/gemini-1.5-pro
- Update AWS setup script default to gemini-3-flash-preview
- Update dashboard config default to gemini-3-flash-preview with global location
- Ensure full compliance with AI_MODEL_STEERING.md requirements

--- a/dashboard/static/config.html
+++ b/dashboard/static/config.html
@@ -284,12 +284,12 @@
                     description: 'AI provider for trading decisions (vertex, palm, gemini)'
                 },
                 'LLM_MODEL': {
-                    default: 'gemini-1.5-flash',
+                    default: 'gemini-3-flash-preview',
                     description: 'Specific AI model to use for analysis'
                 },
                 'LLM_LOCATION': {
-                    default: 'us-central1',
-                    description: 'Google Cloud region for AI services'
+                    default: 'global',
+                    description: 'Google Cloud region for AI services (must be global for preview models)'
                 }
             },
             'Trading Parameters': {
