--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -1467,14 +1467,14 @@
                                                     <div class="analysis-section">
                                                         <h6>AI Detailed Reasoning</h6>
                                                         <ul class="analysis-list ai-reasoning-list">
-                                                            <li><strong>Trend Following:</strong> Downtrend detected but RSI oversold (21.7)</li><li><strong>Mean Reversion:</strong> Mean reversion BUY signal: RSI oversold at 21.7, Price near middle band (29.6% from center)</li><li><strong>Momentum:</strong> Strong bearish momentum detected: Price momentum: 1h=0.0%, 4h=-0.1%, 24h=-0.9%</li><li><strong>Llm Strategy:</strong> Enhanced LLM analysis: ['Extracted BUY signal from LLM response']; News sentiment: bullish (+0.37) from 3 articles, confidence +2.4</li>
+                                                            <li><strong>Trend Following:</strong> Downtrend detected but RSI oversold (25.4)</li><li><strong>Mean Reversion:</strong> Mean reversion BUY signal: RSI oversold at 25.4, Price near middle band (16.8% from center)</li><li><strong>Momentum:</strong> Strong bearish momentum detected: Price momentum: 1h=0.1%, 4h=0.0%, 24h=-1.3%</li><li><strong>Llm Strategy:</strong> Enhanced LLM analysis: ['Extracted HOLD signal from LLM response']; News sentiment: bullish (+0.37) from 3 articles, neutral impact</li>
                                                         </ul>
                                                     </div>
                                                     
                                                     <div class="analysis-section">
                                                         <h6>Bot Decision Logic <span class="tooltip"><i class="fas fa-question-circle help-icon" style="font-size: 0.8rem;"></i><span class="tooltiptext"><h6>AI Decision Making Process</h6>Shows how the bot processes AI recommendations:<ul><li><strong>Confidence Check:</strong> Verifies AI confidence meets minimum threshold</li><li><strong>Risk Assessment:</strong> Evaluates market conditions and portfolio risk</li><li><strong>Final Decision:</strong> Combines AI analysis with risk management rules</li></ul><div class="example">Bot may override AI recommendations if risk is too high</div></span></span></h6>
                                                         <ul class="analysis-list bot-logic-list">
-                                                            <li class="threshold-info">Confidence threshold check: Confidence 56.94184944817576% below threshold (70%)</li>
+                                                            <li class="threshold-info">Confidence threshold check: Confidence 61.03919927670093% below threshold (70%)</li>
                                                             <li class="risk-info">Risk management applied: Risk level: Ranging</li>
                                                             <li class="final-reason">Final decision reason: Final decision: BUY based on combined analysis</li>
                                                         </ul>
@@ -1635,14 +1635,14 @@
                                                     <div class="analysis-section">
                                                         <h6>AI Detailed Reasoning</h6>
                                                         <ul class="analysis-list ai-reasoning-list">
-                                                            <li><strong>Trend Following:</strong> Downtrend detected but RSI oversold (20.9)</li><li><strong>Mean Reversion:</strong> Mean reversion BUY signal: RSI oversold at 20.9, Price near middle band (12.9% from center)</li><li><strong>Momentum:</strong> Strong bearish momentum detected: Price momentum: 1h=0.1%, 4h=0.1%, 24h=-1.1%</li><li><strong>Llm Strategy:</strong> Enhanced LLM analysis: ['Extracted BUY signal from LLM response']; News sentiment: bullish (+0.70) from 2 articles, confidence +6.3</li>
+                                                            <li><strong>Trend Following:</strong> Downtrend detected but RSI oversold (21.5)</li><li><strong>Mean Reversion:</strong> Mean reversion BUY signal: RSI oversold at 21.5, Price near middle band (21.0% from center)</li><li><strong>Momentum:</strong> Strong bearish momentum detected: Price momentum: 1h=0.1%, 4h=0.1%, 24h=-1.9%</li><li><strong>Llm Strategy:</strong> Enhanced LLM analysis: ['Extracted BUY signal from LLM response']; News sentiment: bullish (+0.70) from 2 articles, confidence +6.3</li>
                                                         </ul>
                                                     </div>
                                                     
                                                     <div class="analysis-section">
                                                         <h6>Bot Decision Logic <span class="tooltip"><i class="fas fa-question-circle help-icon" style="font-size: 0.8rem;"></i><span class="tooltiptext"><h6>AI Decision Making Process</h6>Shows how the bot processes AI recommendations:<ul><li><strong>Confidence Check:</strong> Verifies AI confidence meets minimum threshold</li><li><strong>Risk Assessment:</strong> Evaluates market conditions and portfolio risk</li><li><strong>Final Decision:</strong> Combines AI analysis with risk management rules</li></ul><div class="example">Bot may override AI recommendations if risk is too high</div></span></span></h6>
                                                         <ul class="analysis-list bot-logic-list">
-                                                            <li class="threshold-info">Confidence threshold check: Confidence 62.28355183718483% below threshold (70%)</li>
+                                                            <li class="threshold-info">Confidence threshold check: Confidence 59.6753178587531% below threshold (70%)</li>
                                                             <li class="risk-info">Risk management applied: Risk level: Ranging</li>
                                                             <li class="final-reason">Final decision reason: Final decision: BUY based on combined analysis</li>
                                                         </ul>
